Modifying the drop down menu

--- a/index.css
+++ b/index.css
@@ -1,22 +1,22 @@
 #logo {
     display: block;
     margin: auto;
-    width: 40%;
+    width: 30%;
 }
 
 body {
     background-size: 100% 700px;
     background-attachment: fixed;
-
-    font-size: 100%;
     display: block;
     margin: auto;
-    width: 75%;
+    width: 85%;
 }
 
 header {
     background-color: peachpuff ;
-    margin-top: 30px;
+    position: fixed;
+    top: 0;
+    width: 85%;
 }
 
 #menu {
@@ -24,19 +24,23 @@ header {
     text-align: center;
     padding-bottom: 15px;
     overflow: hidden;
+    list-style-type: none;
 }
 
-#menu li{
-    display: inline;
-    padding: 5px 70px 5px 70px;
-    font-size: 1.5em;
-    width: 10%;
+#menu>li{
+    font-size: 1.3em;
+    padding: 3px 50px 3px 50px;
+    width: 15%;
     float: left;
+}
+
+#menu>li a {
+    display: block;
 }
 
 #menu>li:nth-child(1) a{
     color: red;
- }
+}
 
 #menu>li:nth-child(1):hover a {
     color: white;
@@ -83,24 +87,37 @@ header {
     text-decoration: none;
 }
 
-#menu>li:nth-child(2)>ul {
-    font-size: 0.6em;
+#meniu>li {
+    color: red;
+    display: block;
+    text-align: center;
+}
+
+#meniu {
     display: none;
     position: absolute;
+    padding: 10px;
+    list-style-type: none;
+    border-top: 1px solid white;
+    background-color: orange;
+    width: 20%;
+
 }
 
-#menu>li:nth-child(2)>ul>li {
-    display: inline-block;
+#meniu>li a {
+    text-decoration: none;
 }
 
-#menu>li:nth-child(2):hover #meniu {
+#menu>li:hover #meniu {
     display: block;
 }
 
 #body {
     background-color: peachpuff;
     font-size: 20px;
-    margin-top: 40px;
+    margin: 320px auto auto auto;
+    width: 75%;
+    display: block;
 }
 
 h1 {
