Finished q&a page and courses page

--- a/css/qa-css.css
+++ b/css/qa-css.css
@@ -3,16 +3,6 @@
     background: linear-gradient(to bottom right, grey, lightgrey);
 }
 
-button {
-    display: block;
-    font-size: 15px;
-    margin: auto;
-    padding: 10px;
-    border: 2px solid grey;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
 #categorii {
     width: 35%;
     font-size: 20px;
@@ -25,23 +15,24 @@ button {
     padding: 15px;
 }
 
-#categorii>div {
-    display: inline-flex;
-    padding: 15px;
-}
-
 #categorii>div:nth-child(2) {
     border-top: 2px solid dodgerblue;
     border-left: 2px solid dodgerblue;
     border-right: 2px solid dodgerblue;
     border-radius: 8px 8px 0 0;
+    background-color: cornflowerblue;
 }
 
 #categorii>div:hover {
-    border-top: 2px solid dodgerblue;
-    border-left: 2px solid dodgerblue;
-    border-right: 2px solid dodgerblue;
-    border-radius: 8px 8px 0 0;
     cursor: pointer;
 }
 
+#intrebari {
+    margin: -15px 5px 5px 5px;
+    border: 2px solid dodgerblue;
+    border-radius: 8px;
+}
+
+#intrebari>p {
+    margin-left: 20px;
+}
